# Ticket-System

./: .clangd  .gitignore  CMakeLists.txt  my.out  run-test  run.ps1  ticket_system_ticket_tree.data  ticket_system_train_tree.data  ticket_system_user_tree.data
.cache/clangd/index/: BPT.cpp.1483B4EF3BA83D87.idx  String.hpp.9D526630BF0DB8D5.idx  String.hpp.DF63C1345F4A9920.idx  System.cpp.44A3C01683CDA1B9.idx  System.hpp.F89B11988D36E1FE.idx  Ticket.hpp.CE93FCC04BA38791.idx  TicketSystem.cpp.014F827F0EA50B63.idx  TicketSystem.hpp.3AFF8A7E331D2983.idx  Train.hpp.B2D292CEAAD865DB.idx  TrainSystem.cpp.BD08E305E1879FAF.idx  TrainSystem.hpp.42F79F8651C723EB.idx  User.hpp.2CD4E38A59BC3651.idx  UserSystem.cpp.53AA04C2359431EE.idx  UserSystem.hpp.50C456FE20A32D6D.idx  bpt.cpp.749424C834C548FC.idx  bpt.hpp.0766BA4DB1B28C2E.idx  exceptions.hpp.3AAA6A389AC065D0.idx  exceptions.hpp.E9570DA92A237448.idx  list.hpp.920113E53CBCB78F.idx  list.hpp.F9233B5B9D820877.idx  main.cpp.EED4E0C88D6D3A3C.idx  map.hpp.6E6FD7C03889568B.idx  map.hpp.DBD3E6A736695AC5.idx  memoryriver.hpp.8D70AC09A8F8A263.idx  parser.cpp.D8382B7B9E578015.idx  parser.hpp.CC1863E2EC7F440B.idx  utility.hpp.7AC999B6570EB67E.idx  utility.hpp.9BFE75D2D8DE4867.idx  vector.hpp.9EFDA302C4834692.idx
include/: parser.hpp
include/container/: String.hpp  bpt.hpp  list.hpp  map.hpp  vector.hpp
include/memoryriver/: memoryriver.hpp
include/system/: System.hpp  Ticket.hpp  TicketAid.hpp  TicketSystem.hpp  Train.hpp  TrainSystem.hpp  User.hpp  UserSystem.hpp
src/: main.cpp  parser.cpp
src/bpt/: BPT.cpp
src/stl/: list.hpp  map.hpp
src/system/: System.cpp  TicketSystem.cpp  TrainSystem.cpp  UserSystem.cpp  simple_test.txt  stronger_test.sh  stronger_test.txt
